	* client/help/C/pioneers.xml: Updated documentation. Corrected spelling
	to en_us.
	* client/callback.h, client/common/chat.c, client/common/client.h,
	client/common/player.c: Fixed a crash in the client when a /beep is
	sent when not all players are present yet.
	* server/meta.c, server/server.c, server/server.h: Unregister from the
	meta-server when the server stops.

2005-03-30 Samual Wright <sam@lykoszine.co.uk>
	* client/help/C/pioneers.xml: Fixed a typo

2005-03-30 Repository converted from cvs to svn

2005-03-14  0.9.56 Roland Clobus <rclobus@bigfoot.com>
	* server/pregame.c: Show disconnected players when reconnecting
	
2005-02-09  0.9.55 Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, meta-server/README.protocol: New version for the meta
	server
	* meta-server/main.c: Partly reverse the patch for 0.9.54, disable the
	'create' command globally, instead of per connection.
	
2006-02-08  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/.cvsignore, editor/gtk/.cvsignore: Ignore icons
	
2006-02-07  0.9.54 Roland Clobus <rclobus@bigfoot.com>
	* pioneers.nsi.in: Added Swedish translation to installer.
	* client/gtk/connect.c, client/gtk/gui.c, editor/gtk/editor.c,
	server/server.c, server/gtk/main.c: Initialize GError * to NULL
	* meta-server/main.c: Fixes crashes in the metaserver that did allow
	the creation of new servers even when the metaserver does not support
	it.
	* common/gtk/guimap.c (calc_edge_poly): Apply gravity to ships and
	bridges.

2006-02-04  0.9.53 Roland Clobus <rclobus@bigfoot.com>
	* server/main.c, server/player.c, server/server.c, server/server.h,
	server/turn.c, server/gtk/main.c: Fixed memory leaks, at game over the
	GTK server will enable its interface when all players have left.
	* server/trade.c: Fixed a memory leak (based on a patch by Bas Wijnen
	<shevek@fmf.nl>)
	* common/gtk/guimap.c (guimap_cursor_move): Implemented single click 
	build for ship/bridge situations